--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -18,6 +18,7 @@ jobs:
     
   test:
     runs-on: windows-latest
-    needs: build
+    needs: build_1
     steps:
     - uses: actions/checkout@v6
+
