--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -2,7 +2,7 @@ name: First Maven Pipeline
 
 # eventos que gatillan el workflow
 on:
-  workflow_dispatch:
+ # workflow_dispatch:
   push:
     branches: [ "main" ]
   pull_request:
@@ -21,4 +21,5 @@ jobs:
     needs: build_1
     steps:
     - uses: actions/checkout@v6
+
 
