--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -12,9 +12,12 @@ on:
 jobs:
   build_1:
     runs-on: ubuntu-latest
-    # container: maven:3.8.5-openjdk-17
+    container: maven:3.8.5-openjdk-17
     steps:
     - uses: actions/checkout@v6
+
+    - name: Build with maven 
+      run: mvn clean package -DskipTests
     
   test:
     runs-on: windows-latest
